Use a custom class to represent DockerContainer